--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -11,6 +11,90 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <body class="container">
+    <header id="header">
+      <nav id="nav-menu">
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <div id="nav-logo">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  
+    </header>
+  
+    <div id="spaceholder"></div>
+    <section id="section1">
+      <div id="sub">
+        <h1 id="huge">
+          Innovation </br>
+          On </br>
+          Demand
+        </h1>
+        <button id="button1">Get Started</button>
+      </div>
+      <div id="sub-logo">
+        <img class="image1" src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+    </section>
+    <hr>
+  
+    <div class="wrapper">
+      <section class="section-block1">
+        <div class = "large-headers">
+        <h3 class="small-header">Features</h3>
+        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div class = "large-headers">
+        <h3 class="small-header">About</h3>
+        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+        <div>
+      </section>
+    </div>
+   
+    <div class="wrapper2">
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </div>
+  
+    <section class="section-block2">
+      <div class = "bottom-rows">
+      <h3 class="small-header">Services</h3>
+      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class = "bottom-rows">
+        <h3 class="small-header">Product</h3>
+      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+        <div class = "bottom-rows"> 
+        <h3 class="small-header">Vision</h3>
+      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      </section>
+    </div>
+    <hr>
+    <footer id="footer">
+      <h3 class="contact">Contact</h3>
+      <address id="mail"> 123 Way 456 Street<br>
+        Somewhere, USA
+      </address>
+ 
+      <a href="tel:+1 888-888-8888">1 (888) 888-8888</a> <br><br>
+      <a href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+     
+      <footer class ="copyright">Copyright Great Idea! 2018</p>
+    </footer>
+   
+  </body>
+  
 </body>
 </html>
