--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
