--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body class="container">
     <header id="header">
       <nav id="nav-menu">
+        <div class = "mobile-logo-box">
+        <img class="mobile-logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </div>
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
@@ -33,9 +36,10 @@
         <h1 id="huge">
           Innovation </br>
           On </br>
-          Demand
+          Demand <br>
         </h1>
         <button id="button1">Get Started</button>
+        <button id="mobile-button">Get Started</button>
       </div>
       <div id="sub-logo">
         <img class="image1" src="img/header-img.png" alt="Image of a code snippet.">
@@ -89,8 +93,8 @@
         Somewhere, USA
       </address>
  
-      <a href="tel:+1 888-888-8888">1 (888) 888-8888</a> <br><br>
-      <a href="mailto:sales@greatidea.io">sales@greatidea.io</a>
+      <div class = "phone" href="tel:+1 888-888-8888">1 (888) 888-8888</div> 
+      <div class = "email" href="mailto:sales@greatidea.io">sales@greatidea.io</div>
      
       <footer class ="copyright">Copyright Great Idea! 2018</p>
     </footer>
