99% done, minor touchups needed

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
@@ -12,12 +13,12 @@
 </head>
 
 <body>
+
   <body class="container">
     <header id="header">
       <nav id="nav-menu">
-        <div class = "mobile-logo-box">
-        <img class="mobile-logo" src="img/logo.png" alt="Great Idea! Company logo.">
-      </div>
+        <div class="mobile-logo-box">
+        </div>
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
@@ -27,9 +28,10 @@
       </nav>
       <div id="nav-logo">
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  
+      </div>
+
     </header>
-  
+
     <div id="spaceholder"></div>
     <section id="section1">
       <div id="sub">
@@ -39,52 +41,62 @@
           Demand <br>
         </h1>
         <button id="button1">Get Started</button>
-        <button id="mobile-button">Get Started</button>
+
       </div>
       <div id="sub-logo">
         <img class="image1" src="img/header-img.png" alt="Image of a code snippet.">
       </div>
     </section>
     <hr>
-  
+
     <div class="wrapper">
       <section class="section-block1">
-        <div class = "large-headers">
-        <h3 class="small-header">Features</h3>
-        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
-      </div>
-      <div class = "large-headers">
-        <h3 class="small-header">About</h3>
-        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-        </p>
-        <div>
+        <div class="large-headers">
+          <h3 class="small-header">Features</h3>
+          <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+            in
+            interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque
+            quis.
+          </p>
+        </div>
+        <div class="large-headers">
+          <h3 class="small-header">About</h3>
+          <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+            in
+            interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque
+            quis.
+          </p>
+          <div>
       </section>
     </div>
-   
+
     <div class="wrapper2">
       <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     </div>
-  
+
     <section class="section-block2">
-      <div class = "bottom-rows">
-      <h3 class="small-header">Services</h3>
-      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      <div class="bottom-rows">
+        <h3 class="small-header">Services</h3>
+        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+          in
+          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
       </div>
-      <div class = "bottom-rows">
+      <div class="bottom-rows">
         <h3 class="small-header">Product</h3>
-      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+          in
+          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
       </div>
-        <div class = "bottom-rows"> 
+      <div class="bottom-rows">
         <h3 class="small-header">Vision</h3>
-      <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
-        interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+          in
+          interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
       </div>
-      </section>
+    </section>
     </div>
     <hr>
     <footer id="footer">
@@ -92,14 +104,15 @@
       <address id="mail"> 123 Way 456 Street<br>
         Somewhere, USA
       </address>
- 
-      <div class = "phone" href="tel:+1 888-888-8888">1 (888) 888-8888</div> 
-      <div class = "email" href="mailto:sales@greatidea.io">sales@greatidea.io</div>
-     
-      <footer class ="copyright">Copyright Great Idea! 2018</p>
-    </footer>
-   
+
+      <div class="phone" href="tel:+1 888-888-8888">1 (888) 888-8888</div>
+      <div class="email" href="mailto:sales@greatidea.io">sales@greatidea.io</div>
+
+      <footer class="copyright">Copyright Great Idea! 2018</p>
+      </footer>
+
   </body>
-  
+
 </body>
+
 </html>
